--- a/lamppost-app/package.json
+++ b/lamppost-app/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -29,7 +32,9 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
